clud api configuration after session create
